--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/diken666/Drupal_theme_CIAndT/issues"
   },
-  "homepage": "https://github.com/diken666/Drupal_theme_CIAndT#readme"
+  "homepage": "https://github.com/diken666/Drupal_theme_CIAndT#readme",
+  "dependencies": {
+    "D": "^1.0.0",
+    "css-loader": "^3.4.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0"
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10"
+  }
 }
