--- a/CIAndT.info.yml
+++ b/CIAndT.info.yml
@@ -10,6 +10,8 @@ libraries:
 regions:
   header: 'Header'
   banner: 'Banner'
+  provider: 'Provider'
+  custom: 'Custom'
   content: 'Content'
   footer: 'Footer'
   page_top: 'Page Top'
