--- a/CIAndT.info.yml
+++ b/CIAndT.info.yml
@@ -14,6 +14,7 @@ regions:
   custom: 'Custom'
   innovation: 'Innovation'
   locationhero: 'LocationHero'
+  subscription: 'Subscription'
   content: 'Content'
   footer: 'Footer'
   page_top: 'Page Top'
