--- a/CIAndT.libraries.yml
+++ b/CIAndT.libraries.yml
@@ -5,6 +5,9 @@ global-styling:
       css/global.css: {}
       css/swiper.min.css: {}
       css/style.css: {}
+      css/responsive.css: {}
   js:
+    js/jquery-3.4.1.min.js: {}
+    js/swiper.min.js: {}
     js/main.js: {}
-    js/swiper.min.js: 
+
