--- a/CIAndT.info.yml
+++ b/CIAndT.info.yml
@@ -22,4 +22,5 @@ regions:
   contactUs: 'ContactUs'
   page_top: 'Page Top'
   page_bottom: 'page Bottom'
-  highlightsBanner: "Highlights Banner"
+  highlightsBanner: 'Highlights Banner'
+  articleType: 'article type'
