--- a/CIAndT.info.yml
+++ b/CIAndT.info.yml
@@ -23,4 +23,5 @@ regions:
   page_top: 'Page Top'
   page_bottom: 'page Bottom'
   highlightsBanner: 'Highlights Banner'
-  articleType: 'article type'
+  articleType: 'Article Type'
+  articlePage: 'Article Page'
